chore: fix time related translations

--- a/i18n/data/es.json
+++ b/i18n/data/es.json
@@ -15,9 +15,9 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
   "UIKit.CreatableSelectInput.placeholder": "Seleccionar...",
-  "UIKit.DateInput.placeholder": "DD/MM/YYYY",
-  "UIKit.DateRangeInput.placeholder": "DD/MM/YYYY - DD/MM/YYYY",
-  "UIKit.DateTimeInput.placeholder": "DD/MM/YYYY - HH:mm",
+  "UIKit.DateInput.placeholder": "DD/MM/AAAA",
+  "UIKit.DateRangeInput.placeholder": "DD/MM/AAAA - DD/MM/AAAA",
+  "UIKit.DateTimeInput.placeholder": "DD/MM/AAAA - HH:mm",
   "UIKit.DateTimeInput.timePlaceholder": "HH:mm",
   "UIKit.FieldErrors.invalidFractionalNumber": "Sólo números enteros soportados",
   "UIKit.FieldErrors.invalidNegativeNumber": "Sólo números positivos soportados",
