--- a/i18n/data/fr-FR.json
+++ b/i18n/data/fr-FR.json
@@ -15,10 +15,10 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Aucune option",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
   "UIKit.CreatableSelectInput.placeholder": "Sélectionner...",
-  "UIKit.DateInput.placeholder": "MM/JJ/AAAA",
-  "UIKit.DateRangeInput.placeholder": "MM/JJ/AAAA - MM/JJ/AAAA",
-  "UIKit.DateTimeInput.placeholder": "MM/JJ/AAAA - HH:mm AM/PM",
-  "UIKit.DateTimeInput.timePlaceholder": "HH:mm AM/PM",
+  "UIKit.DateInput.placeholder": "JJ/MM/AAAA",
+  "UIKit.DateRangeInput.placeholder": "JJ/MM/AAAA - JJ/MM/AAAA",
+  "UIKit.DateTimeInput.placeholder": "JJ/MM/AAAA - HH:mm",
+  "UIKit.DateTimeInput.timePlaceholder": "HH:mm",
   "UIKit.FieldErrors.invalidFractionalNumber": "Un nombre entier est requis.",
   "UIKit.FieldErrors.invalidNegativeNumber": "Nombre négatif non pris en charge.",
   "UIKit.FieldErrors.missingRequiredField": "Veuillez indiquer au moins une valeur.",
