--- a/i18n/data/zh-CN.json
+++ b/i18n/data/zh-CN.json
@@ -15,10 +15,10 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "无选项",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "无选项",
   "UIKit.CreatableSelectInput.placeholder": "选择...",
-  "UIKit.DateInput.placeholder": "月/日/年",
-  "UIKit.DateRangeInput.placeholder": "月/日/年 - 月/日/年",
-  "UIKit.DateTimeInput.placeholder": "月/日/年 - 小时：分钟 上午/下午",
-  "UIKit.DateTimeInput.timePlaceholder": "小时：分钟 上午/下午",
+  "UIKit.DateInput.placeholder": "年/月/日",
+  "UIKit.DateRangeInput.placeholder": "年/月/日 - 年/月/日",
+  "UIKit.DateTimeInput.placeholder": "年/月/日 - 小时：分钟",
+  "UIKit.DateTimeInput.timePlaceholder": "小时：分钟",
   "UIKit.FieldErrors.invalidFractionalNumber": "需要完整数字。",
   "UIKit.FieldErrors.invalidNegativeNumber": "不支持负数。",
   "UIKit.FieldErrors.missingRequiredField": "此字段为必填项。请提供一个值。",
@@ -42,5 +42,5 @@
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "无选项",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "无选项",
   "UIKit.SelectInput.placeholder": "选择...",
-  "UIKit.TimeInput.placeholder": "小时：分钟 上午/下午"
+  "UIKit.TimeInput.placeholder": "小时：分钟"
 }
