--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -15,10 +15,10 @@
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
   "UIKit.CreatableSelectInput.placeholder": "Auswählen...",
-  "UIKit.DateInput.placeholder": "DD.MM.YYYY",
-  "UIKit.DateRangeInput.placeholder": "DD.MM.YYYY - DD.MM.YYYY",
-  "UIKit.DateTimeInput.placeholder": "DD.MM.YYYY - HH:mm",
-  "UIKit.DateTimeInput.timePlaceholder": "HH:mm",
+  "UIKit.DateInput.placeholder": "TT.MM.JJJJ",
+  "UIKit.DateRangeInput.placeholder": "TT.MM.JJJJ - TT.MM.JJJJ",
+  "UIKit.DateTimeInput.placeholder": "TT.MM.JJJJ - SS:mm",
+  "UIKit.DateTimeInput.timePlaceholder": "SS:mm",
   "UIKit.FieldErrors.invalidFractionalNumber": "Eine ganze Zahl ist erforderlich.",
   "UIKit.FieldErrors.invalidNegativeNumber": "Negative Zahlen werden nicht unterstützt.",
   "UIKit.FieldErrors.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
