--- a/i18n/data/fr-FR.json
+++ b/i18n/data/fr-FR.json
@@ -30,6 +30,11 @@
   "UIKit.LocalizedMultilineTextInput.hide": "Masquer les langues  ({remainingLanguages})",
   "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Ce champ est requis. Veuillez indiquer au moins une valeur.",
   "UIKit.LocalizedMultilineTextInput.show": "Afficher toutes les langues ({remainingLanguages})",
+  "UIKit.LocalizedRichTextInput.collapse": "",
+  "UIKit.LocalizedRichTextInput.expand": "",
+  "UIKit.LocalizedRichTextInput.hide": "",
+  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
+  "UIKit.LocalizedRichTextInput.show": "",
   "UIKit.LocalizedTextInput.collapse": "Masquer les langues  ({remainingLanguages})",
   "UIKit.LocalizedTextInput.expand": "Afficher toutes les langues ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Ce champ est requis. Veuillez indiquer au moins une valeur.",
@@ -39,6 +44,39 @@
   "UIKit.MultilineTextInput.expand": "Développer",
   "UIKit.PasswordField.hide": "masquer",
   "UIKit.PasswordField.show": "afficher",
+  "UIKit.RichTextBody.boldButtonLabel": "",
+  "UIKit.RichTextBody.boldTooltipTitle": "",
+  "UIKit.RichTextBody.expandButtonLabel": "",
+  "UIKit.RichTextBody.expandTooltipTitle": "",
+  "UIKit.RichTextBody.italicButtonLabel": "",
+  "UIKit.RichTextBody.italicTooltipTitle": "",
+  "UIKit.RichTextBody.moreStylesDropdownLabel": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "",
+  "UIKit.RichTextBody.moreStylesDropdownTooltipTitle": "",
+  "UIKit.RichTextBody.orderedListButtonLabel": "",
+  "UIKit.RichTextBody.orderedListTooltipTitle": "",
+  "UIKit.RichTextBody.redoButtonLabel": "",
+  "UIKit.RichTextBody.redoTooltipTitle": "",
+  "UIKit.RichTextBody.styleDropdownLabel": "",
+  "UIKit.RichTextBody.styleDropdownOptionH1": "",
+  "UIKit.RichTextBody.styleDropdownOptionH2": "",
+  "UIKit.RichTextBody.styleDropdownOptionH3": "",
+  "UIKit.RichTextBody.styleDropdownOptionH4": "",
+  "UIKit.RichTextBody.styleDropdownOptionH5": "",
+  "UIKit.RichTextBody.styleDropdownOptionParagraph": "",
+  "UIKit.RichTextBody.styleDropdownOptionPreformatted": "",
+  "UIKit.RichTextBody.styleDropdownOptionQuote": "",
+  "UIKit.RichTextBody.styleDropdownTooltip": "",
+  "UIKit.RichTextBody.underlinedButtonLabel": "",
+  "UIKit.RichTextBody.underlinedTooltipTitle": "",
+  "UIKit.RichTextBody.undoButtonLabel": "",
+  "UIKit.RichTextBody.undoTooltipTitle": "",
+  "UIKit.RichTextBody.unorderedListButtonLabel": "",
+  "UIKit.RichTextBody.unorderedListTooltipTitle": "",
+  "UIKit.RichTextInput.collapse": "",
+  "UIKit.RichTextInput.expand": "",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Aucune option",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
   "UIKit.SelectInput.placeholder": "Sélectionner...",
