--- a/i18n/data/zh-CN.json
+++ b/i18n/data/zh-CN.json
@@ -30,6 +30,11 @@
   "UIKit.LocalizedMultilineTextInput.hide": "隐藏语言 ({remainingLanguages})",
   "UIKit.LocalizedMultilineTextInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
   "UIKit.LocalizedMultilineTextInput.show": "显示所有语言 ({remainingLanguages})",
+  "UIKit.LocalizedRichTextInput.collapse": "",
+  "UIKit.LocalizedRichTextInput.expand": "",
+  "UIKit.LocalizedRichTextInput.hide": "",
+  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
+  "UIKit.LocalizedRichTextInput.show": "",
   "UIKit.LocalizedTextInput.collapse": "隐藏所有语言 ({remainingLanguages})",
   "UIKit.LocalizedTextInput.expand": "显示所有语言 ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
@@ -39,6 +44,39 @@
   "UIKit.MultilineTextInput.expand": "扩展",
   "UIKit.PasswordField.hide": "隐藏",
   "UIKit.PasswordField.show": "显示",
+  "UIKit.RichTextBody.boldButtonLabel": "",
+  "UIKit.RichTextBody.boldTooltipTitle": "",
+  "UIKit.RichTextBody.expandButtonLabel": "",
+  "UIKit.RichTextBody.expandTooltipTitle": "",
+  "UIKit.RichTextBody.italicButtonLabel": "",
+  "UIKit.RichTextBody.italicTooltipTitle": "",
+  "UIKit.RichTextBody.moreStylesDropdownLabel": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "",
+  "UIKit.RichTextBody.moreStylesDropdownTooltipTitle": "",
+  "UIKit.RichTextBody.orderedListButtonLabel": "",
+  "UIKit.RichTextBody.orderedListTooltipTitle": "",
+  "UIKit.RichTextBody.redoButtonLabel": "",
+  "UIKit.RichTextBody.redoTooltipTitle": "",
+  "UIKit.RichTextBody.styleDropdownLabel": "",
+  "UIKit.RichTextBody.styleDropdownOptionH1": "",
+  "UIKit.RichTextBody.styleDropdownOptionH2": "",
+  "UIKit.RichTextBody.styleDropdownOptionH3": "",
+  "UIKit.RichTextBody.styleDropdownOptionH4": "",
+  "UIKit.RichTextBody.styleDropdownOptionH5": "",
+  "UIKit.RichTextBody.styleDropdownOptionParagraph": "",
+  "UIKit.RichTextBody.styleDropdownOptionPreformatted": "",
+  "UIKit.RichTextBody.styleDropdownOptionQuote": "",
+  "UIKit.RichTextBody.styleDropdownTooltip": "",
+  "UIKit.RichTextBody.underlinedButtonLabel": "",
+  "UIKit.RichTextBody.underlinedTooltipTitle": "",
+  "UIKit.RichTextBody.undoButtonLabel": "",
+  "UIKit.RichTextBody.undoTooltipTitle": "",
+  "UIKit.RichTextBody.unorderedListButtonLabel": "",
+  "UIKit.RichTextBody.unorderedListTooltipTitle": "",
+  "UIKit.RichTextInput.collapse": "",
+  "UIKit.RichTextInput.expand": "",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "无选项",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "无选项",
   "UIKit.SelectInput.placeholder": "选择...",
