--- a/i18n/data/core.json
+++ b/i18n/data/core.json
@@ -30,6 +30,11 @@
   "UIKit.LocalizedMultilineTextInput.hide": "Hide languages ({remainingLanguages})",
   "UIKit.LocalizedMultilineTextInput.missingRequiredField": "This field is required. Provide at least one value.",
   "UIKit.LocalizedMultilineTextInput.show": "Show all languages ({remainingLanguages})",
+  "UIKit.LocalizedRichTextInput.collapse": "Collapse",
+  "UIKit.LocalizedRichTextInput.expand": "Expand",
+  "UIKit.LocalizedRichTextInput.hide": "Hide languages ({remainingLanguages})",
+  "UIKit.LocalizedRichTextInput.missingRequiredField": "This field is required. Provide at least one value.",
+  "UIKit.LocalizedRichTextInput.show": "Show all languages ({remainingLanguages})",
   "UIKit.LocalizedTextInput.collapse": "Hide languages ({remainingLanguages})",
   "UIKit.LocalizedTextInput.expand": "Show all languages ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "This field is required. Provide at least one value.",
@@ -39,6 +44,39 @@
   "UIKit.MultilineTextInput.expand": "Expand",
   "UIKit.PasswordField.hide": "hide",
   "UIKit.PasswordField.show": "show",
+  "UIKit.RichTextBody.boldButtonLabel": "Bold",
+  "UIKit.RichTextBody.boldTooltipTitle": "Bold",
+  "UIKit.RichTextBody.expandButtonLabel": "Expand",
+  "UIKit.RichTextBody.expandTooltipTitle": "Expand",
+  "UIKit.RichTextBody.italicButtonLabel": "Italic",
+  "UIKit.RichTextBody.italicTooltipTitle": "Italic",
+  "UIKit.RichTextBody.moreStylesDropdownLabel": "More styles",
+  "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "Strikethrough",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "Subscript",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "Superscript",
+  "UIKit.RichTextBody.moreStylesDropdownTooltipTitle": "More styles",
+  "UIKit.RichTextBody.orderedListButtonLabel": "Ordered list",
+  "UIKit.RichTextBody.orderedListTooltipTitle": "Ordered list",
+  "UIKit.RichTextBody.redoButtonLabel": "Redo",
+  "UIKit.RichTextBody.redoTooltipTitle": "Redo",
+  "UIKit.RichTextBody.styleDropdownLabel": "Style",
+  "UIKit.RichTextBody.styleDropdownOptionH1": "Headline H1",
+  "UIKit.RichTextBody.styleDropdownOptionH2": "Headline H2",
+  "UIKit.RichTextBody.styleDropdownOptionH3": "Headline H3",
+  "UIKit.RichTextBody.styleDropdownOptionH4": "Headline H4",
+  "UIKit.RichTextBody.styleDropdownOptionH5": "Headline H5",
+  "UIKit.RichTextBody.styleDropdownOptionParagraph": "Paragraph",
+  "UIKit.RichTextBody.styleDropdownOptionPreformatted": "Preformatted",
+  "UIKit.RichTextBody.styleDropdownOptionQuote": "Quote",
+  "UIKit.RichTextBody.styleDropdownTooltip": "Text styles",
+  "UIKit.RichTextBody.underlinedButtonLabel": "Underline",
+  "UIKit.RichTextBody.underlinedTooltipTitle": "Underline",
+  "UIKit.RichTextBody.undoButtonLabel": "Undo",
+  "UIKit.RichTextBody.undoTooltipTitle": "Undo",
+  "UIKit.RichTextBody.unorderedListButtonLabel": "Unordered list",
+  "UIKit.RichTextBody.unorderedListTooltipTitle": "Unordered list",
+  "UIKit.RichTextInput.collapse": "Collapse",
+  "UIKit.RichTextInput.expand": "Expand",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "No options",
   "UIKit.SelectInput.placeholder": "Select...",
