--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -30,6 +30,11 @@
   "UIKit.LocalizedMultilineTextInput.hide": "Sprachen verbergen",
   "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.LocalizedMultilineTextInput.show": "Alle Sprachen anzeigen",
+  "UIKit.LocalizedRichTextInput.collapse": "",
+  "UIKit.LocalizedRichTextInput.expand": "",
+  "UIKit.LocalizedRichTextInput.hide": "",
+  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
+  "UIKit.LocalizedRichTextInput.show": "",
   "UIKit.LocalizedTextInput.collapse": "Sprachen verbergen",
   "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
@@ -39,6 +44,39 @@
   "UIKit.MultilineTextInput.expand": "Erweitern",
   "UIKit.PasswordField.hide": "verbergen",
   "UIKit.PasswordField.show": "anzeigen",
+  "UIKit.RichTextBody.boldButtonLabel": "",
+  "UIKit.RichTextBody.boldTooltipTitle": "",
+  "UIKit.RichTextBody.expandButtonLabel": "",
+  "UIKit.RichTextBody.expandTooltipTitle": "",
+  "UIKit.RichTextBody.italicButtonLabel": "",
+  "UIKit.RichTextBody.italicTooltipTitle": "",
+  "UIKit.RichTextBody.moreStylesDropdownLabel": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "",
+  "UIKit.RichTextBody.moreStylesDropdownTooltipTitle": "",
+  "UIKit.RichTextBody.orderedListButtonLabel": "",
+  "UIKit.RichTextBody.orderedListTooltipTitle": "",
+  "UIKit.RichTextBody.redoButtonLabel": "",
+  "UIKit.RichTextBody.redoTooltipTitle": "",
+  "UIKit.RichTextBody.styleDropdownLabel": "",
+  "UIKit.RichTextBody.styleDropdownOptionH1": "",
+  "UIKit.RichTextBody.styleDropdownOptionH2": "",
+  "UIKit.RichTextBody.styleDropdownOptionH3": "",
+  "UIKit.RichTextBody.styleDropdownOptionH4": "",
+  "UIKit.RichTextBody.styleDropdownOptionH5": "",
+  "UIKit.RichTextBody.styleDropdownOptionParagraph": "",
+  "UIKit.RichTextBody.styleDropdownOptionPreformatted": "",
+  "UIKit.RichTextBody.styleDropdownOptionQuote": "",
+  "UIKit.RichTextBody.styleDropdownTooltip": "",
+  "UIKit.RichTextBody.underlinedButtonLabel": "",
+  "UIKit.RichTextBody.underlinedTooltipTitle": "",
+  "UIKit.RichTextBody.undoButtonLabel": "",
+  "UIKit.RichTextBody.undoTooltipTitle": "",
+  "UIKit.RichTextBody.unorderedListButtonLabel": "",
+  "UIKit.RichTextBody.unorderedListTooltipTitle": "",
+  "UIKit.RichTextInput.collapse": "",
+  "UIKit.RichTextInput.expand": "",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
   "UIKit.SelectInput.placeholder": "Auswählen...",
