chore: update translation

--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -30,18 +30,18 @@
   "UIKit.LocalizedMultilineTextInput.hide": "Sprachen verbergen",
   "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.LocalizedMultilineTextInput.show": "Alle Sprachen anzeigen",
-  "UIKit.LocalizedRichTextInput.collapse": "",
-  "UIKit.LocalizedRichTextInput.expand": "",
-  "UIKit.LocalizedRichTextInput.hide": "",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
-  "UIKit.LocalizedRichTextInput.show": "",
+  "UIKit.LocalizedRichTextInput.collapse": "Verbergen",
+  "UIKit.LocalizedRichTextInput.expand": "Anzeigen",
+  "UIKit.LocalizedRichTextInput.hide": "Sprachen verbergen",
+  "UIKit.LocalizedRichTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
+  "UIKit.LocalizedRichTextInput.show": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.collapse": "Sprachen verbergen",
   "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.MoneyField.highPrecision": "Hochpräzisionspreis",
   "UIKit.MoneyInput.highPrecision": "Hochpräzisionspreis",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
-  "UIKit.MultilineTextInput.expand": "Erweitern",
+  "UIKit.MultilineTextInput.expand": "Einblenden",
   "UIKit.PasswordField.hide": "verbergen",
   "UIKit.PasswordField.show": "anzeigen",
   "UIKit.RichTextBody.boldButtonLabel": "",
@@ -75,8 +75,8 @@
   "UIKit.RichTextBody.undoTooltipTitle": "",
   "UIKit.RichTextBody.unorderedListButtonLabel": "",
   "UIKit.RichTextBody.unorderedListTooltipTitle": "",
-  "UIKit.RichTextInput.collapse": "",
-  "UIKit.RichTextInput.expand": "",
+  "UIKit.RichTextInput.collapse": "Ausblenden",
+  "UIKit.RichTextInput.expand": "Einblenden",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
   "UIKit.SelectInput.placeholder": "Auswählen...",
