--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -30,15 +30,43 @@
   "UIKit.LocalizedMultilineTextInput.hide": "Sprachen verbergen",
   "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.LocalizedMultilineTextInput.show": "Alle Sprachen anzeigen",
+  "UIKit.LocalizedRichTextInput.collapse": "Verbergen",
+  "UIKit.LocalizedRichTextInput.expand": "Anzeigen",
+  "UIKit.LocalizedRichTextInput.hide": "Sprachen verbergen",
+  "UIKit.LocalizedRichTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
+  "UIKit.LocalizedRichTextInput.show": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.collapse": "Sprachen verbergen",
   "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.MoneyField.highPrecision": "Hochpräzisionspreis",
   "UIKit.MoneyInput.highPrecision": "Hochpräzisionspreis",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
-  "UIKit.MultilineTextInput.expand": "Erweitern",
+  "UIKit.MultilineTextInput.expand": "Einblenden",
   "UIKit.PasswordField.hide": "verbergen",
   "UIKit.PasswordField.show": "anzeigen",
+  "UIKit.RichTextBody.boldButtonLabel": "",
+  "UIKit.RichTextBody.expandButtonLabel": "",
+  "UIKit.RichTextBody.italicButtonLabel": "",
+  "UIKit.RichTextBody.moreStylesDropdownLabel": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "",
+  "UIKit.RichTextBody.orderedListButtonLabel": "",
+  "UIKit.RichTextBody.redoButtonLabel": "",
+  "UIKit.RichTextBody.styleDropdownLabel": "",
+  "UIKit.RichTextBody.styleDropdownOptionH1": "",
+  "UIKit.RichTextBody.styleDropdownOptionH2": "",
+  "UIKit.RichTextBody.styleDropdownOptionH3": "",
+  "UIKit.RichTextBody.styleDropdownOptionH4": "",
+  "UIKit.RichTextBody.styleDropdownOptionH5": "",
+  "UIKit.RichTextBody.styleDropdownOptionParagraph": "",
+  "UIKit.RichTextBody.styleDropdownOptionPreformatted": "",
+  "UIKit.RichTextBody.styleDropdownOptionQuote": "",
+  "UIKit.RichTextBody.underlinedButtonLabel": "",
+  "UIKit.RichTextBody.undoButtonLabel": "",
+  "UIKit.RichTextBody.unorderedListButtonLabel": "",
+  "UIKit.RichTextInput.collapse": "Ausblenden",
+  "UIKit.RichTextInput.expand": "Einblenden",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
   "UIKit.SelectInput.placeholder": "Auswählen...",
