--- a/i18n/data/es.json
+++ b/i18n/data/es.json
@@ -30,6 +30,11 @@
   "UIKit.LocalizedMultilineTextInput.hide": "Ocultar lenguajes ({remainingLanguages})",
   "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
   "UIKit.LocalizedMultilineTextInput.show": "Mostrar todos los lenguajes ({remainingLanguages})",
+  "UIKit.LocalizedRichTextInput.collapse": "",
+  "UIKit.LocalizedRichTextInput.expand": "",
+  "UIKit.LocalizedRichTextInput.hide": "",
+  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
+  "UIKit.LocalizedRichTextInput.show": "",
   "UIKit.LocalizedTextInput.collapse": "Ocultar lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.expand": "Mostrar todos los lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
@@ -39,6 +44,29 @@
   "UIKit.MultilineTextInput.expand": "Expandir",
   "UIKit.PasswordField.hide": "ocultar",
   "UIKit.PasswordField.show": "mostrar",
+  "UIKit.RichTextBody.boldButtonLabel": "",
+  "UIKit.RichTextBody.expandButtonLabel": "",
+  "UIKit.RichTextBody.italicButtonLabel": "",
+  "UIKit.RichTextBody.moreStylesDropdownLabel": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "",
+  "UIKit.RichTextBody.orderedListButtonLabel": "",
+  "UIKit.RichTextBody.redoButtonLabel": "",
+  "UIKit.RichTextBody.styleDropdownLabel": "",
+  "UIKit.RichTextBody.styleDropdownOptionH1": "",
+  "UIKit.RichTextBody.styleDropdownOptionH2": "",
+  "UIKit.RichTextBody.styleDropdownOptionH3": "",
+  "UIKit.RichTextBody.styleDropdownOptionH4": "",
+  "UIKit.RichTextBody.styleDropdownOptionH5": "",
+  "UIKit.RichTextBody.styleDropdownOptionParagraph": "",
+  "UIKit.RichTextBody.styleDropdownOptionPreformatted": "",
+  "UIKit.RichTextBody.styleDropdownOptionQuote": "",
+  "UIKit.RichTextBody.underlinedButtonLabel": "",
+  "UIKit.RichTextBody.undoButtonLabel": "",
+  "UIKit.RichTextBody.unorderedListButtonLabel": "",
+  "UIKit.RichTextInput.collapse": "",
+  "UIKit.RichTextInput.expand": "",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
   "UIKit.SelectInput.placeholder": "Seleccionar...",
