--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -23,11 +23,10 @@
   "UIKit.LocalizedRichTextInput.collapse": "Verbergen",
   "UIKit.LocalizedRichTextInput.expand": "Anzeigen",
   "UIKit.LocalizedRichTextInput.hide": "Sprachen verbergen",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.LocalizedRichTextInput.show": "Alle Sprachen anzeigen",
-  "UIKit.LocalizedTextInput.collapse": "Sprachen verbergen",
-  "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
+  "UIKit.LocalizedTextInput.hide": "Sprachen verbergen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
+  "UIKit.LocalizedTextInput.show": "Alle Sprachen anzeigen",
   "UIKit.MoneyInput.highPrecision": "Hochpräzisionspreis",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
   "UIKit.MultilineTextInput.expand": "Einblenden",
