--- a/i18n/data/es.json
+++ b/i18n/data/es.json
@@ -23,11 +23,10 @@
   "UIKit.LocalizedRichTextInput.collapse": "",
   "UIKit.LocalizedRichTextInput.expand": "",
   "UIKit.LocalizedRichTextInput.hide": "",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
   "UIKit.LocalizedRichTextInput.show": "",
-  "UIKit.LocalizedTextInput.collapse": "Ocultar lenguajes ({remainingLanguages})",
-  "UIKit.LocalizedTextInput.expand": "Mostrar todos los lenguajes ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.hide": "Ocultar lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
+  "UIKit.LocalizedTextInput.show": "Mostrar todos los lenguajes ({remainingLanguages})",
   "UIKit.MoneyInput.highPrecision": "Precio de alta precisión",
   "UIKit.MultilineTextInput.collapse": "Contraer",
   "UIKit.MultilineTextInput.expand": "Expandir",
