--- a/i18n/data/fr-FR.json
+++ b/i18n/data/fr-FR.json
@@ -23,11 +23,10 @@
   "UIKit.LocalizedRichTextInput.collapse": "",
   "UIKit.LocalizedRichTextInput.expand": "",
   "UIKit.LocalizedRichTextInput.hide": "",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
   "UIKit.LocalizedRichTextInput.show": "",
-  "UIKit.LocalizedTextInput.collapse": "Masquer les langues  ({remainingLanguages})",
-  "UIKit.LocalizedTextInput.expand": "Afficher toutes les langues ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.hide": "Masquer les langues  ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Ce champ est requis. Veuillez indiquer au moins une valeur.",
+  "UIKit.LocalizedTextInput.show": "Afficher toutes les langues ({remainingLanguages})",
   "UIKit.MoneyInput.highPrecision": "Prix haute précision",
   "UIKit.MultilineTextInput.collapse": "Réduire",
   "UIKit.MultilineTextInput.expand": "Développer",
