--- a/i18n/data/en.json
+++ b/i18n/data/en.json
@@ -23,11 +23,10 @@
   "UIKit.LocalizedRichTextInput.collapse": "Collapse",
   "UIKit.LocalizedRichTextInput.expand": "Expand",
   "UIKit.LocalizedRichTextInput.hide": "Hide languages ({remainingLanguages})",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "This field is required. Provide at least one value.",
   "UIKit.LocalizedRichTextInput.show": "Show all languages ({remainingLanguages})",
-  "UIKit.LocalizedTextInput.collapse": "Hide languages ({remainingLanguages})",
-  "UIKit.LocalizedTextInput.expand": "Show all languages ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.hide": "Hide languages ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "This field is required. Provide at least one value.",
+  "UIKit.LocalizedTextInput.show": "Show all languages ({remainingLanguages})",
   "UIKit.MoneyInput.highPrecision": "High Precision Price",
   "UIKit.MultilineTextInput.collapse": "Collapse",
   "UIKit.MultilineTextInput.expand": "Expand",
