--- a/i18n/data/zh-CN.json
+++ b/i18n/data/zh-CN.json
@@ -23,11 +23,10 @@
   "UIKit.LocalizedRichTextInput.collapse": "",
   "UIKit.LocalizedRichTextInput.expand": "",
   "UIKit.LocalizedRichTextInput.hide": "",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
   "UIKit.LocalizedRichTextInput.show": "",
-  "UIKit.LocalizedTextInput.collapse": "隐藏所有语言 ({remainingLanguages})",
-  "UIKit.LocalizedTextInput.expand": "显示所有语言 ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.hide": "隐藏语言 ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
+  "UIKit.LocalizedTextInput.show": "显示所有语言 ({remainingLanguages})",
   "UIKit.MoneyInput.highPrecision": "价格精确度高",
   "UIKit.MultilineTextInput.collapse": "崩溃",
   "UIKit.MultilineTextInput.expand": "扩展",
