chore: combine i18n messages (#1130)
* chore: start combining i18ns

* chore: move some messages internal

* chore: combine messages

* chore: more refactoring i18n

* chore: remove unnecessary file

* chore: remove unused file

* chore: move i18n files around

--- a/i18n/data/core.json
+++ b/i18n/data/core.json
@@ -1,20 +1,10 @@
 {
-  "UIKit.AsyncCreatableSelectInput.createLabel": "Create \"{inputValue}\"",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "No options",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
-  "UIKit.AsyncCreatableSelectInput.placeholder": "Select...",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "No options",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "No options",
-  "UIKit.AsyncSelectInput.placeholder": "Select...",
   "UIKit.CalendarHeader.nextMonthTooltip": "Next month",
   "UIKit.CalendarHeader.nextYearTooltip": "Next year",
   "UIKit.CalendarHeader.previousMonthTooltip": "Previous month",
   "UIKit.CalendarHeader.previousYearTooltip": "Previous year",
   "UIKit.CalendarHeader.todayTooltip": "Today",
   "UIKit.CreatableSelectInput.createLabel": "Create \"{inputValue}\"",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "No options",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
-  "UIKit.CreatableSelectInput.placeholder": "Select...",
   "UIKit.DateInput.placeholder": "MM/DD/YYYY",
   "UIKit.DateRangeInput.placeholder": "MM/DD/YYYY - MM/DD/YYYY",
   "UIKit.DateTimeInput.placeholder": "MM/DD/YYYY - HH:mm AM/PM",
@@ -25,20 +15,9 @@
   "UIKit.LocalizedMoneyInput.hide": "Hide currencies ({remainingCurrencies})",
   "UIKit.LocalizedMoneyInput.missingRequiredField": "This field is required. Provide at least one value.",
   "UIKit.LocalizedMoneyInput.show": "Show all currencies ({remainingCurrencies})",
-  "UIKit.LocalizedMultilineTextInput.collapse": "Collapse",
-  "UIKit.LocalizedMultilineTextInput.expand": "Expand",
-  "UIKit.LocalizedMultilineTextInput.hide": "Hide languages ({remainingLanguages})",
-  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "This field is required. Provide at least one value.",
-  "UIKit.LocalizedMultilineTextInput.show": "Show all languages ({remainingLanguages})",
-  "UIKit.LocalizedRichTextInput.collapse": "Collapse",
-  "UIKit.LocalizedRichTextInput.expand": "Expand",
-  "UIKit.LocalizedRichTextInput.hide": "Hide languages ({remainingLanguages})",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "This field is required. Provide at least one value.",
-  "UIKit.LocalizedRichTextInput.show": "Show all languages ({remainingLanguages})",
-  "UIKit.LocalizedTextInput.collapse": "Hide languages ({remainingLanguages})",
-  "UIKit.LocalizedTextInput.expand": "Show all languages ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.hide": "Hide languages ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "This field is required. Provide at least one value.",
-  "UIKit.MoneyField.highPrecision": "High Precision Price",
+  "UIKit.LocalizedTextInput.show": "Show all languages ({remainingLanguages})",
   "UIKit.MoneyInput.highPrecision": "High Precision Price",
   "UIKit.MultilineTextInput.collapse": "Collapse",
   "UIKit.MultilineTextInput.expand": "Expand",
@@ -65,8 +44,6 @@
   "UIKit.RichTextBody.underlinedButtonLabel": "Underline",
   "UIKit.RichTextBody.undoButtonLabel": "Undo",
   "UIKit.RichTextBody.unorderedListButtonLabel": "Unordered list",
-  "UIKit.RichTextInput.collapse": "Collapse",
-  "UIKit.RichTextInput.expand": "Expand",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "No options",
   "UIKit.SelectInput.placeholder": "Select...",
