--- a/i18n/data/es.json
+++ b/i18n/data/es.json
@@ -1,20 +1,10 @@
 {
-  "UIKit.AsyncCreatableSelectInput.createLabel": "Crear \"{inputValue}\"",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
-  "UIKit.AsyncCreatableSelectInput.placeholder": "Seleccionar...",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
-  "UIKit.AsyncSelectInput.placeholder": "Seleccionar...",
   "UIKit.CalendarHeader.nextMonthTooltip": "Próximo mes",
   "UIKit.CalendarHeader.nextYearTooltip": "Próximo año",
   "UIKit.CalendarHeader.previousMonthTooltip": "Mes anterior",
   "UIKit.CalendarHeader.previousYearTooltip": "Año anterior",
   "UIKit.CalendarHeader.todayTooltip": "Hoy",
   "UIKit.CreatableSelectInput.createLabel": "Crear \"{inputValue}\"",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
-  "UIKit.CreatableSelectInput.placeholder": "Seleccionar...",
   "UIKit.DateInput.placeholder": "DD/MM/AAAA",
   "UIKit.DateRangeInput.placeholder": "DD/MM/AAAA - DD/MM/AAAA",
   "UIKit.DateTimeInput.placeholder": "DD/MM/AAAA - HH:mm",
@@ -25,20 +15,9 @@
   "UIKit.LocalizedMoneyInput.hide": "Ocultar divisas ({remainingCurrencies})",
   "UIKit.LocalizedMoneyInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
   "UIKit.LocalizedMoneyInput.show": "Mostrar todas las divisas ({remainingCurrencies})",
-  "UIKit.LocalizedMultilineTextInput.collapse": "Contraer",
-  "UIKit.LocalizedMultilineTextInput.expand": "Expandir",
-  "UIKit.LocalizedMultilineTextInput.hide": "Ocultar lenguajes ({remainingLanguages})",
-  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
-  "UIKit.LocalizedMultilineTextInput.show": "Mostrar todos los lenguajes ({remainingLanguages})",
-  "UIKit.LocalizedRichTextInput.collapse": "",
-  "UIKit.LocalizedRichTextInput.expand": "",
-  "UIKit.LocalizedRichTextInput.hide": "",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
-  "UIKit.LocalizedRichTextInput.show": "",
-  "UIKit.LocalizedTextInput.collapse": "Ocultar lenguajes ({remainingLanguages})",
-  "UIKit.LocalizedTextInput.expand": "Mostrar todos los lenguajes ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.hide": "Ocultar lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
-  "UIKit.MoneyField.highPrecision": "Precio de alta precisión",
+  "UIKit.LocalizedTextInput.show": "Mostrar todos los lenguajes ({remainingLanguages})",
   "UIKit.MoneyInput.highPrecision": "Precio de alta precisión",
   "UIKit.MultilineTextInput.collapse": "Contraer",
   "UIKit.MultilineTextInput.expand": "Expandir",
@@ -65,8 +44,6 @@
   "UIKit.RichTextBody.underlinedButtonLabel": "",
   "UIKit.RichTextBody.undoButtonLabel": "",
   "UIKit.RichTextBody.unorderedListButtonLabel": "",
-  "UIKit.RichTextInput.collapse": "",
-  "UIKit.RichTextInput.expand": "",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
   "UIKit.SelectInput.placeholder": "Seleccionar...",
