--- a/i18n/data/zh-CN.json
+++ b/i18n/data/zh-CN.json
@@ -1,20 +1,10 @@
 {
-  "UIKit.AsyncCreatableSelectInput.createLabel": "创建 \"{inputValue}\"",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "无选项",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "无选项",
-  "UIKit.AsyncCreatableSelectInput.placeholder": "选择...",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "无选项",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "无选项",
-  "UIKit.AsyncSelectInput.placeholder": "选择...",
   "UIKit.CalendarHeader.nextMonthTooltip": "下个月",
   "UIKit.CalendarHeader.nextYearTooltip": "下一年",
   "UIKit.CalendarHeader.previousMonthTooltip": "上个月",
   "UIKit.CalendarHeader.previousYearTooltip": "上一年",
   "UIKit.CalendarHeader.todayTooltip": "今天",
   "UIKit.CreatableSelectInput.createLabel": "创建 \"{inputValue}\"",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "无选项",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "无选项",
-  "UIKit.CreatableSelectInput.placeholder": "选择...",
   "UIKit.DateInput.placeholder": "年/月/日",
   "UIKit.DateRangeInput.placeholder": "年/月/日 - 年/月/日",
   "UIKit.DateTimeInput.placeholder": "年/月/日 - 小时：分钟",
@@ -25,20 +15,9 @@
   "UIKit.LocalizedMoneyInput.hide": "隐藏货币 ({remainingCurrencies})",
   "UIKit.LocalizedMoneyInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
   "UIKit.LocalizedMoneyInput.show": "显示所有货币 ({remainingCurrencies})",
-  "UIKit.LocalizedMultilineTextInput.collapse": "崩溃",
-  "UIKit.LocalizedMultilineTextInput.expand": "扩展",
-  "UIKit.LocalizedMultilineTextInput.hide": "隐藏语言 ({remainingLanguages})",
-  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
-  "UIKit.LocalizedMultilineTextInput.show": "显示所有语言 ({remainingLanguages})",
-  "UIKit.LocalizedRichTextInput.collapse": "",
-  "UIKit.LocalizedRichTextInput.expand": "",
-  "UIKit.LocalizedRichTextInput.hide": "",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
-  "UIKit.LocalizedRichTextInput.show": "",
-  "UIKit.LocalizedTextInput.collapse": "隐藏所有语言 ({remainingLanguages})",
-  "UIKit.LocalizedTextInput.expand": "显示所有语言 ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.hide": "隐藏语言 ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
-  "UIKit.MoneyField.highPrecision": "价格精确度高",
+  "UIKit.LocalizedTextInput.show": "显示所有语言 ({remainingLanguages})",
   "UIKit.MoneyInput.highPrecision": "价格精确度高",
   "UIKit.MultilineTextInput.collapse": "崩溃",
   "UIKit.MultilineTextInput.expand": "扩展",
@@ -65,8 +44,6 @@
   "UIKit.RichTextBody.underlinedButtonLabel": "",
   "UIKit.RichTextBody.undoButtonLabel": "",
   "UIKit.RichTextBody.unorderedListButtonLabel": "",
-  "UIKit.RichTextInput.collapse": "",
-  "UIKit.RichTextInput.expand": "",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "无选项",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "无选项",
   "UIKit.SelectInput.placeholder": "选择...",
