--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -1,20 +1,10 @@
 {
-  "UIKit.AsyncCreatableSelectInput.createLabel": "\"{inputValue}\" erstellen",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
-  "UIKit.AsyncCreatableSelectInput.placeholder": "Auswählen...",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
-  "UIKit.AsyncSelectInput.placeholder": "Auswählen...",
   "UIKit.CalendarHeader.nextMonthTooltip": "nächstes Monat",
   "UIKit.CalendarHeader.nextYearTooltip": "nächstes Jahr",
   "UIKit.CalendarHeader.previousMonthTooltip": "letztes Monat",
   "UIKit.CalendarHeader.previousYearTooltip": "letztes Jahr",
   "UIKit.CalendarHeader.todayTooltip": "Heute",
   "UIKit.CreatableSelectInput.createLabel": "\"{inputValue}\" erstellen",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
-  "UIKit.CreatableSelectInput.placeholder": "Auswählen...",
   "UIKit.DateInput.placeholder": "TT.MM.JJJJ",
   "UIKit.DateRangeInput.placeholder": "TT.MM.JJJJ - TT.MM.JJJJ",
   "UIKit.DateTimeInput.placeholder": "TT.MM.JJJJ - SS:mm",
@@ -25,20 +15,9 @@
   "UIKit.LocalizedMoneyInput.hide": "Währungen verbergen ({remainingCurrencies})",
   "UIKit.LocalizedMoneyInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.LocalizedMoneyInput.show": "Alle Währungen anzeigen ({remainingCurrencies})",
-  "UIKit.LocalizedMultilineTextInput.collapse": "Verbergen",
-  "UIKit.LocalizedMultilineTextInput.expand": "Anzeigen",
-  "UIKit.LocalizedMultilineTextInput.hide": "Sprachen verbergen",
-  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
-  "UIKit.LocalizedMultilineTextInput.show": "Alle Sprachen anzeigen",
-  "UIKit.LocalizedRichTextInput.collapse": "Verbergen",
-  "UIKit.LocalizedRichTextInput.expand": "Anzeigen",
-  "UIKit.LocalizedRichTextInput.hide": "Sprachen verbergen",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
-  "UIKit.LocalizedRichTextInput.show": "Alle Sprachen anzeigen",
-  "UIKit.LocalizedTextInput.collapse": "Sprachen verbergen",
-  "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
+  "UIKit.LocalizedTextInput.hide": "Sprachen verbergen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
-  "UIKit.MoneyField.highPrecision": "Hochpräzisionspreis",
+  "UIKit.LocalizedTextInput.show": "Alle Sprachen anzeigen",
   "UIKit.MoneyInput.highPrecision": "Hochpräzisionspreis",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
   "UIKit.MultilineTextInput.expand": "Einblenden",
@@ -65,8 +44,6 @@
   "UIKit.RichTextBody.underlinedButtonLabel": "",
   "UIKit.RichTextBody.undoButtonLabel": "",
   "UIKit.RichTextBody.unorderedListButtonLabel": "",
-  "UIKit.RichTextInput.collapse": "Ausblenden",
-  "UIKit.RichTextInput.expand": "Einblenden",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
   "UIKit.SelectInput.placeholder": "Auswählen...",
