--- a/i18n/data/fr-FR.json
+++ b/i18n/data/fr-FR.json
@@ -1,20 +1,10 @@
 {
-  "UIKit.AsyncCreatableSelectInput.createLabel": "Créer \"{inputValue}\"",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "Aucune option",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
-  "UIKit.AsyncCreatableSelectInput.placeholder": "Sélectionner...",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "Aucune option",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
-  "UIKit.AsyncSelectInput.placeholder": "Sélectionner...",
   "UIKit.CalendarHeader.nextMonthTooltip": "Mois suivant",
   "UIKit.CalendarHeader.nextYearTooltip": "Année suivante",
   "UIKit.CalendarHeader.previousMonthTooltip": "Mois précédent",
   "UIKit.CalendarHeader.previousYearTooltip": "Année précédente",
   "UIKit.CalendarHeader.todayTooltip": "Aujourd'hui",
   "UIKit.CreatableSelectInput.createLabel": "Créer \"{inputValue}\"",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Aucune option",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
-  "UIKit.CreatableSelectInput.placeholder": "Sélectionner...",
   "UIKit.DateInput.placeholder": "JJ/MM/AAAA",
   "UIKit.DateRangeInput.placeholder": "JJ/MM/AAAA - JJ/MM/AAAA",
   "UIKit.DateTimeInput.placeholder": "JJ/MM/AAAA - HH:mm",
@@ -25,20 +15,9 @@
   "UIKit.LocalizedMoneyInput.hide": "Masquer les devices ({remainingCurrencies})",
   "UIKit.LocalizedMoneyInput.missingRequiredField": "Ce champ est requis. Veuillez indiquer une valeur.",
   "UIKit.LocalizedMoneyInput.show": "Afficher toutes les devises  ({remainingCurrencies})",
-  "UIKit.LocalizedMultilineTextInput.collapse": "Réduire",
-  "UIKit.LocalizedMultilineTextInput.expand": "Développer",
-  "UIKit.LocalizedMultilineTextInput.hide": "Masquer les langues  ({remainingLanguages})",
-  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Ce champ est requis. Veuillez indiquer au moins une valeur.",
-  "UIKit.LocalizedMultilineTextInput.show": "Afficher toutes les langues ({remainingLanguages})",
-  "UIKit.LocalizedRichTextInput.collapse": "",
-  "UIKit.LocalizedRichTextInput.expand": "",
-  "UIKit.LocalizedRichTextInput.hide": "",
-  "UIKit.LocalizedRichTextInput.missingRequiredField": "",
-  "UIKit.LocalizedRichTextInput.show": "",
-  "UIKit.LocalizedTextInput.collapse": "Masquer les langues  ({remainingLanguages})",
-  "UIKit.LocalizedTextInput.expand": "Afficher toutes les langues ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.hide": "Masquer les langues  ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Ce champ est requis. Veuillez indiquer au moins une valeur.",
-  "UIKit.MoneyField.highPrecision": "Prix haute précision",
+  "UIKit.LocalizedTextInput.show": "Afficher toutes les langues ({remainingLanguages})",
   "UIKit.MoneyInput.highPrecision": "Prix haute précision",
   "UIKit.MultilineTextInput.collapse": "Réduire",
   "UIKit.MultilineTextInput.expand": "Développer",
@@ -65,8 +44,6 @@
   "UIKit.RichTextBody.underlinedButtonLabel": "",
   "UIKit.RichTextBody.undoButtonLabel": "",
   "UIKit.RichTextBody.unorderedListButtonLabel": "",
-  "UIKit.RichTextInput.collapse": "",
-  "UIKit.RichTextInput.expand": "",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Aucune option",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
   "UIKit.SelectInput.placeholder": "Sélectionner...",
