chore: add german i18n

--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -23,27 +23,27 @@
   "UIKit.MultilineTextInput.expand": "Einblenden",
   "UIKit.PasswordField.hide": "verbergen",
   "UIKit.PasswordField.show": "anzeigen",
-  "UIKit.RichTextBody.boldButtonLabel": "",
-  "UIKit.RichTextBody.expandButtonLabel": "",
-  "UIKit.RichTextBody.italicButtonLabel": "",
-  "UIKit.RichTextBody.moreStylesDropdownLabel": "",
-  "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "",
-  "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "",
-  "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "",
-  "UIKit.RichTextBody.orderedListButtonLabel": "",
-  "UIKit.RichTextBody.redoButtonLabel": "",
-  "UIKit.RichTextBody.styleDropdownLabel": "",
-  "UIKit.RichTextBody.styleDropdownOptionH1": "",
-  "UIKit.RichTextBody.styleDropdownOptionH2": "",
-  "UIKit.RichTextBody.styleDropdownOptionH3": "",
-  "UIKit.RichTextBody.styleDropdownOptionH4": "",
-  "UIKit.RichTextBody.styleDropdownOptionH5": "",
-  "UIKit.RichTextBody.styleDropdownOptionParagraph": "",
-  "UIKit.RichTextBody.styleDropdownOptionPreformatted": "",
-  "UIKit.RichTextBody.styleDropdownOptionQuote": "",
-  "UIKit.RichTextBody.underlinedButtonLabel": "",
-  "UIKit.RichTextBody.undoButtonLabel": "",
-  "UIKit.RichTextBody.unorderedListButtonLabel": "",
+  "UIKit.RichTextBody.boldButtonLabel": "Fett",
+  "UIKit.RichTextBody.expandButtonLabel": "Einblenden",
+  "UIKit.RichTextBody.italicButtonLabel": "Kursiv",
+  "UIKit.RichTextBody.moreStylesDropdownLabel": "Weitere Stile",
+  "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "Durchgestrichen",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "Hochstellen",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "Tiefstellen",
+  "UIKit.RichTextBody.orderedListButtonLabel": "Nummerierte Liste",
+  "UIKit.RichTextBody.redoButtonLabel": "Wiederholen",
+  "UIKit.RichTextBody.styleDropdownLabel": "Textstil",
+  "UIKit.RichTextBody.styleDropdownOptionH1": "Überschrift H1",
+  "UIKit.RichTextBody.styleDropdownOptionH2": "Überschrift H2",
+  "UIKit.RichTextBody.styleDropdownOptionH3": "Überschrift H3",
+  "UIKit.RichTextBody.styleDropdownOptionH4": "Überschrift H4",
+  "UIKit.RichTextBody.styleDropdownOptionH5": "Überschrift H5",
+  "UIKit.RichTextBody.styleDropdownOptionParagraph": "Paragraf",
+  "UIKit.RichTextBody.styleDropdownOptionPreformatted": "Vorformatiert",
+  "UIKit.RichTextBody.styleDropdownOptionQuote": "Zitat",
+  "UIKit.RichTextBody.underlinedButtonLabel": "Unterstrichen",
+  "UIKit.RichTextBody.undoButtonLabel": "Rückgängig",
+  "UIKit.RichTextBody.unorderedListButtonLabel": "Aufzählungsliste",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
   "UIKit.SelectInput.placeholder": "Auswählen...",
