--- a/i18n/data/en.json
+++ b/i18n/data/en.json
@@ -30,7 +30,7 @@
   "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "Strikethrough",
   "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "Subscript",
   "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "Superscript",
-  "UIKit.RichTextBody.orderedListButtonLabel": "Ordered list",
+  "UIKit.RichTextBody.orderedListButtonLabel": "Numbered list",
   "UIKit.RichTextBody.redoButtonLabel": "Redo",
   "UIKit.RichTextBody.styleDropdownLabel": "Style",
   "UIKit.RichTextBody.styleDropdownOptionH1": "Headline H1",
@@ -43,7 +43,7 @@
   "UIKit.RichTextBody.styleDropdownOptionQuote": "Quote",
   "UIKit.RichTextBody.underlinedButtonLabel": "Underline",
   "UIKit.RichTextBody.undoButtonLabel": "Undo",
-  "UIKit.RichTextBody.unorderedListButtonLabel": "Unordered list",
+  "UIKit.RichTextBody.unorderedListButtonLabel": "Bullet list",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "No options",
   "UIKit.SelectInput.placeholder": "Select...",
