chore: add spanish i18n

--- a/i18n/data/es.json
+++ b/i18n/data/es.json
@@ -23,27 +23,27 @@
   "UIKit.MultilineTextInput.expand": "Expandir",
   "UIKit.PasswordField.hide": "ocultar",
   "UIKit.PasswordField.show": "mostrar",
-  "UIKit.RichTextBody.boldButtonLabel": "",
-  "UIKit.RichTextBody.expandButtonLabel": "",
-  "UIKit.RichTextBody.italicButtonLabel": "",
-  "UIKit.RichTextBody.moreStylesDropdownLabel": "",
-  "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "",
-  "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "",
-  "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "",
-  "UIKit.RichTextBody.orderedListButtonLabel": "",
-  "UIKit.RichTextBody.redoButtonLabel": "",
-  "UIKit.RichTextBody.styleDropdownLabel": "",
-  "UIKit.RichTextBody.styleDropdownOptionH1": "",
-  "UIKit.RichTextBody.styleDropdownOptionH2": "",
-  "UIKit.RichTextBody.styleDropdownOptionH3": "",
-  "UIKit.RichTextBody.styleDropdownOptionH4": "",
-  "UIKit.RichTextBody.styleDropdownOptionH5": "",
-  "UIKit.RichTextBody.styleDropdownOptionParagraph": "",
-  "UIKit.RichTextBody.styleDropdownOptionPreformatted": "",
-  "UIKit.RichTextBody.styleDropdownOptionQuote": "",
-  "UIKit.RichTextBody.underlinedButtonLabel": "",
-  "UIKit.RichTextBody.undoButtonLabel": "",
-  "UIKit.RichTextBody.unorderedListButtonLabel": "",
+  "UIKit.RichTextBody.boldButtonLabel": "Negrita",
+  "UIKit.RichTextBody.expandButtonLabel": "Expandir",
+  "UIKit.RichTextBody.italicButtonLabel": "Itálica",
+  "UIKit.RichTextBody.moreStylesDropdownLabel": "Mas estilos",
+  "UIKit.RichTextBody.moreStylesDropdownOptionStrikethrough": "Tachar",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSubscript": "Subíndice",
+  "UIKit.RichTextBody.moreStylesDropdownOptionSuperscript": "Superíndice",
+  "UIKit.RichTextBody.orderedListButtonLabel": "Lista numerada",
+  "UIKit.RichTextBody.redoButtonLabel": "Rehacer",
+  "UIKit.RichTextBody.styleDropdownLabel": "Estilo",
+  "UIKit.RichTextBody.styleDropdownOptionH1": "Título 1",
+  "UIKit.RichTextBody.styleDropdownOptionH2": "Título 2",
+  "UIKit.RichTextBody.styleDropdownOptionH3": "Título 3",
+  "UIKit.RichTextBody.styleDropdownOptionH4": "Título 4",
+  "UIKit.RichTextBody.styleDropdownOptionH5": "Título 5",
+  "UIKit.RichTextBody.styleDropdownOptionParagraph": "Párrafo",
+  "UIKit.RichTextBody.styleDropdownOptionPreformatted": "Preformateado",
+  "UIKit.RichTextBody.styleDropdownOptionQuote": "Cita",
+  "UIKit.RichTextBody.underlinedButtonLabel": "Subrayado",
+  "UIKit.RichTextBody.undoButtonLabel": "Deshacer",
+  "UIKit.RichTextBody.unorderedListButtonLabel": "Lista con viñetas",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
   "UIKit.SelectInput.placeholder": "Seleccionar...",
